# cozy-bistro

./: .gitignore  AI_CHARACTERS.md  GRAPHICS_ART_UPGRADE_PLAN.md  LICENSE  LPC_CHARACTERS.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: deploy.yml
docs/: game-design.md  luxury-balance.md  roadmap.md
scripts/: generate_atlases.py  simulate-full-process.mjs
src/: main.ts  style.css
src/assets/atlases/: characters.json  environment.json  (+2 more)
src/components/: types.ts
src/data/: customers.ts  furniture.ts  graphicsTheme.ts  recipes.ts  upgrades.ts  visualAssets.ts
src/scenes/: GameScene.ts
src/systems/: CookingSystem.ts  CustomerSystem.ts  DayCycleSystem.ts  EconomySystem.ts  FurniturePlacementSystem.ts  ReputationSystem.ts  RestaurantGridSystem.ts  SaveSystem.ts  StaffSystem.ts
tmp_compare/: chef_hunyuan_shape.glb
v2/: .env.example  .gitignore  MIGRATION_PLAN.md  PHASE_I_PLAN.md  dish-art-spec.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
v2/docs/: phase-h-server-authoritative-audit.md  server-authoritative-plan.md
v2/public/: test-char-viewer.html
v2/scripts/: generate_meshy_characters.py  generate_triposr.py
v2/spacetime/: .gitignore  Cargo.toml  README.md
v2/spacetime/src/: lib.rs  tables.rs
v2/spacetime/src/reducers/: achievements.rs  auth.rs  buildings.rs  chat.rs  favorites.rs  friends.rs  leaderboard.rs  lifecycle.rs  mod.rs  pathfinding.rs  pedestrians.rs  restaurant_sim.rs  restaurants.rs  social.rs  weather.rs
v2/src/: envStorage.ts  main.ts  vite-env.d.ts
(+136 files in other folders)
